# serenity-engine

./: CMakeLists.txt  build.bat  build.sh  configure.bat  configure.sh
src/: main.cpp
src/Engine/: CameraManager.h  Engine.cpp  Engine.h  InputManager.cpp  InputManager.h  Window.cpp  Window.h
src/Scene/: Components.h  Scene.cpp  Scene.h
src/Storage/: ModelManager.h
src/Systems/: MovementSystem.h  RenderSystem.h
